--- a/Stocky.Client/Components/Layout/NavMenu.razor
+++ b/Stocky.Client/Components/Layout/NavMenu.razor
@@ -42,6 +42,10 @@
         <MudNavLink Href="adding-product" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.PlaylistAdd">
             Добавление продукта
         </MudNavLink>
+
+        <MudNavLink Href="pockets" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Inventory">
+            Пакеты
+        </MudNavLink>
     }
 
     <MudNavLink OnClick="Logout" Icon="@Icons.Material.Filled.ExitToApp" Color="Color.Error">
