--- a/Stocky.Client/Components/Pages/Login.razor
+++ b/Stocky.Client/Components/Pages/Login.razor
@@ -1,4 +1,4 @@
-@page "/admin"
+@page "/admin-panel-93xk12sx0"
 @using MudBlazor.Components.DialogWindows
 @using MudBlazor.Components.Layout
 @using MudBlazor.Components.Service
